--- a/SFSimulator.Frontend/wwwroot/app.css
+++ b/SFSimulator.Frontend/wwwroot/app.css
@@ -1,6 +1,12 @@
+@import "tailwindcss";
+
 @font-face {
     font-family: Poppins;
     src: url(../fonts/Poppins-Regular.ttf);
+}
+
+* {
+    scrollbar-color: rgba(187, 134, 252, 0.42) transparent;
 }
 
 html, body {
