--- a/SFSimulator.Frontend/Dialogs/CrashReportDialog.razor
+++ b/SFSimulator.Frontend/Dialogs/CrashReportDialog.razor
@@ -17,7 +17,7 @@
             }
         }
     </RadzenStack>
-    <RadzenText>If the problem reoccurs, contact me on discord: abus3r_</RadzenText>
+    <RadzenText>If the problem reoccurs, contact me on discord: @Constants.DiscordContact</RadzenText>
     <RadzenRow JustifyContent="JustifyContent.End">
         <RadzenButton Variant="Variant.Filled" Shade="Shade.Lighter" ButtonStyle="ButtonStyle.Danger" Click="DialogService.Close">CLOSE</RadzenButton>
     </RadzenRow>
