--- a/SFSimulator.Frontend/Components/Chart.razor
+++ b/SFSimulator.Frontend/Components/Chart.razor
@@ -5,7 +5,7 @@
 }
 else
 {
-    <div class="d-flex justify-content-center align-items-center h-100">
+    <div class="flex h-full items-center justify-center">
         <h3>No data to display</h3>
     </div>
 }
