--- a/SFSimulator.Frontend/Pages/Simulator/SimulationResultView.razor
+++ b/SFSimulator.Frontend/Pages/Simulator/SimulationResultView.razor
@@ -6,7 +6,7 @@
     <RadzenRow JustifyContent="JustifyContent.Center" AlignItems="AlignItems.Center" class="rz-px-4 rz-border-radius-2" Gap="0">
         <RadzenColumn Size="12" SizeLG="5" class="rz-p-4 rz-border-radius-2" Style="background-color: rgba(0,0,0,0.3)">
             <RadzenText TextStyle="TextStyle.H4" class="rz-m-0">Before</RadzenText>
-            <hr class="rz-my-2"/>
+            <hr class="my-2 border-neutral-600"/>
             <RadzenRow JustifyContent="JustifyContent.SpaceBetween">
                 <RadzenText TextStyle="TextStyle.Body1">Level:</RadzenText>
                 <RadzenText TextStyle="TextStyle.Body1">@Result.BeforeSimulation.Level</RadzenText>
@@ -24,13 +24,13 @@
                 <RadzenText TextStyle="TextStyle.Body1">@DateTime.Today.ToShortDateString()</RadzenText>
             </RadzenRow>
         </RadzenColumn>
-        <RadzenColumn Size="12" SizeLG="2" class="d-flex justify-content-center align-items-center">
+        <RadzenColumn Size="12" SizeLG="2" class="flex items-center justify-center">
             <RadzenIcon Icon="double_arrow" Style="font-size: 120px;" class="rz-display-none rz-display-lg-block"/>
             <RadzenIcon Icon="double_arrow" Style="font-size: 120px; rotate: 90deg;" class="rz-display-lg-none"/>
         </RadzenColumn>
         <RadzenColumn Size="12" SizeLG="5" class="rz-p-4 rz-border-radius-2" Style="background-color: rgba(0,0,0,0.3)">
             <RadzenText TextStyle="TextStyle.H4" class="rz-m-0">After</RadzenText>
-            <hr class="rz-my-2"/>
+            <hr class="my-2 border-neutral-600"/>
             <RadzenRow JustifyContent="JustifyContent.SpaceBetween">
                 <RadzenText TextStyle="TextStyle.Body1">Level:</RadzenText>
                 <RadzenText TextStyle="TextStyle.Body1">@Result.AfterSimulation.Level</RadzenText>
@@ -45,35 +45,31 @@
             </RadzenRow>
             <RadzenRow JustifyContent="JustifyContent.SpaceBetween">
                 <RadzenText TextStyle="TextStyle.Body1">Date:</RadzenText>
-                <RadzenText TextStyle="TextStyle.Body1">@DateTime.Today.AddDays(Result.Days).ToShortDateString()</RadzenText>
+                <RadzenText TextStyle="TextStyle.Body1">@DateTime.Today.AddDays(Result.Days-1).ToShortDateString()</RadzenText>
             </RadzenRow>
         </RadzenColumn>
     </RadzenRow>
-    <hr />
-    <RadzenRow JustifyContent="JustifyContent.Center" AlignItems="AlignItems.Center" class="rz-mb-4">
-        <RadzenColumn Size="4" class="d-flex justify-content-center align-items-center">
-            <RadzenText>
-                Days passed: @Result.Days
-            </RadzenText>
-        </RadzenColumn>
-        <RadzenColumn Size="4" class="d-flex justify-content-center align-items-center">
-            <RadzenText>
-                Base stats: @Result.AfterSimulation.BaseStat (+@(Result.AfterSimulation.BaseStat - Result.BeforeSimulation.BaseStat))
-            </RadzenText>
-        </RadzenColumn>
-        <RadzenColumn Size="4" class="d-flex justify-content-center align-items-center">
-            <RadzenText>
-                Level: @Result.AfterSimulation.Level (+@(Result.AfterSimulation.Level - Result.BeforeSimulation.Level))
-            </RadzenText>
-        </RadzenColumn>
-    </RadzenRow>
+    <hr class="my-2 border-neutral-600"/>
+    <div class="mb-4 flex flex-col gap-5 xs:flex-row xs:gap-0">
+        <RadzenText class="flex basis-1/3 flex-col items-center text-center md:justify-center md:flex-row md:gap-2">
+            Days passed: @Result.Days
+        </RadzenText>
+        <RadzenText class="flex basis-1/3 flex-col items-center text-center md:justify-center md:flex-row md:gap-2">
+            Base stats: @Result.AfterSimulation.BaseStat 
+            <span>(+@(Result.AfterSimulation.BaseStat - Result.BeforeSimulation.BaseStat))</span>
+        </RadzenText>
+        <RadzenText class="flex basis-1/3 flex-col items-center text-center md:justify-center md:flex-row md:gap-2">
+            Level: @Result.AfterSimulation.Level 
+            <span>(+@(Result.AfterSimulation.Level - Result.BeforeSimulation.Level))</span>
+        </RadzenText>
+    </div>
     <RadzenAccordion Multiple="true">
         <Items>
             <RadzenAccordionItem>
                 <Template>
-                    <div style="display: flex; justify-content: space-between; align-items: center;">
+                    <div class="flex items-center justify-between">
                         <SfIcon Icon="Chart"/>
-                        <div class="rz-ms-2">
+                        <div class="ml-2">
                             Charts 
                         </div>
                     </div>
@@ -93,9 +89,9 @@
             </RadzenAccordionItem>
             <RadzenAccordionItem>
                 <Template>
-                    <div style="display: flex; justify-content: space-between; align-items: center;">
+                    <div class="flex items-center justify-between">
                         <SfIcon Icon="Quickview"/>
-                        <div class="rz-ms-2">
+                        <div class="ml-2">
                             Timeline
                         </div>
                     </div>
@@ -113,7 +109,7 @@
                                                 <LabelContent>
                                                     <RadzenStack Gap="0">
                                                         <div>Day @achievement.Day</div>
-                                                        <div>(@DateTime.Today.AddDays(achievement.Day).ToShortDateString())</div>
+                                                        <div>(@DateTime.Today.AddDays(achievement.Day-1).ToShortDateString())</div>
                                                     </RadzenStack>
                                                 </LabelContent>
                                                 <ChildContent>
