--- a/SFSimulator.Frontend/Pages/Simulator/SimulatorPage.razor
+++ b/SFSimulator.Frontend/Pages/Simulator/SimulatorPage.razor
@@ -4,7 +4,7 @@
 <PageTitle>@Constants.PageTitle</PageTitle>
 
 <RadzenRow>
-    <RadzenColumn SizeLG="5" SizeMD="12" Size="12" class="justify-content-center d-flex">
+    <RadzenColumn SizeLG="5" SizeMD="12" Size="12">
         <SimulationOptions @bind-Options:set="Simulate" @bind-Options:get="Options"/>
     </RadzenColumn>
     @if (SimulationResult is not null)
