--- a/SFSimulator.Frontend/wwwroot/app.css
+++ b/SFSimulator.Frontend/wwwroot/app.css
@@ -1,8 +1,12 @@
-@import "tailwindcss";
+@import "tailwindcss" source("../");
 
 @font-face {
     font-family: Poppins;
     src: url(../fonts/Poppins-Regular.ttf);
+}
+
+@theme {
+    --breakpoint-xs: 30rem;
 }
 
 * {
@@ -28,10 +32,6 @@ html, body {
 .endpoint-dialog-wrapper {
     flex-grow: 1 !important;
     padding: 0 !important;
-}
-
-.p-abso {
-    position: absolute;
 }
 
 .bg-card {
@@ -106,38 +106,6 @@ html, body {
     content: "An error has occurred."
 }
 
-.loading-progress {
-    position: relative;
-    display: block;
-    width: 8rem;
-    height: 8rem;
-    margin: 20vh auto 1rem auto;
-}
-
-.loading-progress circle {
-    fill: none;
-    stroke: #e0e0e0;
-    stroke-width: 0.6rem;
-    transform-origin: 50% 50%;
-    transform: rotate(-90deg);
-}
-
-.loading-progress circle:last-child {
-    stroke: #1b6ec2;
-    stroke-dasharray: calc(3.141 * var(--blazor-load-percentage, 0%) * 0.8), 500%;
-    transition: stroke-dasharray 0.05s ease-in-out;
-}
-
-.loading-progress-text {
-    position: absolute;
-    text-align: center;
-    font-weight: bold;
-    inset: calc(20vh + 3.25rem) 0 auto 0.2rem;
-}
-
-.loading-progress-text:after {
-    content: var(--blazor-load-percentage-text, "Loading");
-}
 .menuitem-secondary {
     border-color: var(--rz-secondary) !important;
 }
@@ -177,4 +145,32 @@ ul[role=tablist] {
 
 .rz-accordion-header {
     background-color: rgba(0,0,0,0.2) !important;
+}
+
+.progress-bar {
+  height: 1rem;
+  background-color: rgb(20,20,20);
+  width: 50%;
+  overflow: hidden;
+  border-radius: 0.25rem;
+}
+
+.progress-bar-value {
+  width: 100%;
+  height: 100%;
+  background-color: var(--rz-primary);
+  animation: indeterminateAnimation 1s infinite linear;
+  transform-origin: 0% 50%;
+}
+
+@keyframes indeterminateAnimation {
+  0% {
+    transform:  translateX(0) scaleX(0);
+  }
+  40% {
+    transform:  translateX(0) scaleX(0.4);
+  }
+  100% {
+    transform:  translateX(100%) scaleX(0.5);
+  }
 }
