--- a/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
+++ b/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
@@ -1,14 +1,17 @@
 ﻿@page "/patch-notes"
 
-<RadzenCard class="bg-card">
-    <RadzenText TextStyle="TextStyle.H1" class="text-blue-400">Current version: @Constants.CurrentVersion</RadzenText>
-    <RadzenMarkdown>
-        ## 2.0.0
+<RadzenCard class="bg-card px-5">
+    <RadzenText TextStyle="TextStyle.H3" class="text-blue-200!">Current version: @Constants.CurrentVersion</RadzenText>
+    <RadzenMarkdown class="px-10">
+### 2.0.0
 
-        ### New Features
-        - **New UI**: The entire user interface has been redesigned for a more modern and intuitive experience.
-        - **Dungeons**: Added support for incorporating dungeons simulation *(currently only works if you poll data via SF Tools endpoint)*
-        ### Other
-        - Tavern quest options is no longer possible
+#### New Features
+- **New UI**: The entire user interface has been redesigned for a more modern and intuitive experience.
+- **Dungeons**: Added support for incorporating dungeons simulation *(currently only works if you poll data via SF Tools endpoint)*
+#### Other
+- Tavern quest options is no longer possible
+
+---
+
     </RadzenMarkdown>
 </RadzenCard>
