--- a/SFSimulator.Frontend/App.razor
+++ b/SFSimulator.Frontend/App.razor
@@ -1,6 +1,4 @@
-﻿<RadzenTheme Theme="material-dark"/>
-
-<Router AppAssembly="@typeof(App).Assembly">
+﻿<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
