Fixed scrapbook service not counting scrapbook fillness propperly Added support for attributes from calendar Fixed time machine giving experience before level 125 Fixed guild bonus not increasing properly

--- a/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
+++ b/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
@@ -8,8 +8,8 @@
 #### New Features
 - **New UI**: The entire user interface has been redesigned for a more modern and intuitive experience.
 - **Dungeons**: Added support for incorporating dungeons simulation *(currently only works if you poll data via SF Tools endpoint)*
-#### Other
-- Tavern quest options is no longer possible
+#### Removed 
+- **Tavern Quest**: quest are no longer optimal gameplay, thus support for them is removed 
 
 ---
 
