--- a/SFSimulator.Frontend/Pages/Simulator/SimulatorPage.razor
+++ b/SFSimulator.Frontend/Pages/Simulator/SimulatorPage.razor
@@ -5,7 +5,7 @@
 
 <RadzenRow>
     <RadzenColumn SizeLG="5" SizeMD="12" Size="12">
-        <SimulationOptions @bind-Options:set="Simulate" @bind-Options:get="Options"/>
+        <SimulationOptions Simulate="Simulate"/>
     </RadzenColumn>
     @if (SimulationResult is not null)
     {
