--- a/SFSimulator.Frontend/wwwroot/app.output.css
+++ b/SFSimulator.Frontend/wwwroot/app.output.css
@@ -8,6 +8,7 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-300: oklch(80.8% 0.114 19.571);
+    --color-red-800: oklch(44.4% 0.177 26.899);
     --color-blue-200: oklch(88.2% 0.059 254.128);
     --color-blue-400: oklch(70.7% 0.165 254.624);
     --color-neutral-600: oklch(43.9% 0 0);
@@ -169,6 +170,9 @@
   .my-2 {
     margin-block: calc(var(--spacing) * 2);
   }
+  .ms-2 {
+    margin-inline-start: calc(var(--spacing) * 2);
+  }
   .mt-4\! {
     margin-top: calc(var(--spacing) * 4) !important;
   }
@@ -246,6 +250,9 @@
   }
   .bg-\[rgba\(0\,0\,0\,0\.6\)\] {
     background-color: rgba(0,0,0,0.6);
+  }
+  .bg-red-800\! {
+    background-color: var(--color-red-800) !important;
   }
   .bg-transparent {
     background-color: transparent;
