--- a/SFSimulator.Frontend/Pages/Simulator/SimulationOptions.razor
+++ b/SFSimulator.Frontend/Pages/Simulator/SimulationOptions.razor
@@ -73,7 +73,6 @@
                                         <Numeric Icon="Treasure" Name="Treasure" Label="Treasure" Min="0" Max="200" @bind-Value="@Options.GoldBonus.GuildBonus"/>
                                         <Numeric Icon="GoldRune" Name="GoldRuneBonus" Label="Gold Rune" Min="0" Max="50" @bind-Value="@Options.GoldBonus.RuneBonus"/>
                                         <CheckBox Name="GoldScroll" Label="Gold Scroll" @bind-Value="@Options.GoldBonus.HasGoldScroll"/>
-                                        <CheckBox Name="ArenaGoldScroll" Label="Arena Gold Scroll" @bind-Value="@Options.GoldBonus.HasArenaGoldScroll"/>
                                     </div>
                                 </div>
                             </ChildContent>
@@ -147,7 +146,7 @@
                                     <div class="ml-2">
                                         Dungeons
                                     </div>
-                                    <RadzenBadge Variant="Variant.Filled" BadgeStyle="BadgeStyle.Danger" Text="BETA" class="bg-red-800! ms-2" />
+                                    <RadzenBadge Variant="Variant.Filled" BadgeStyle="BadgeStyle.Danger" Text="BETA" class="ms-2 bg-red-800!" />
                                 </div>
                             </Template>
                             <ChildContent>
