Upgraded to .NET9 Added funky texts to progress bar

--- a/SFSimulator.Frontend/Pages/ManualPage.razor
+++ b/SFSimulator.Frontend/Pages/ManualPage.razor
@@ -4,7 +4,7 @@
     <RadzenText TextStyle="TextStyle.H2">Manual</RadzenText>
     <RadzenMarkdown class="px-10">
 ### What is SF Simulator
-**SF Simulator** is a website tool, that allows you to simulate/track your character future progress in the game **Shakes & Fidget**.<br />
+**SF Simulator** is a website tool, that allows you to simulate/track your character future progress in the game of **Shakes & Fidget**.<br />
 Below you can find a light-weight manual on how to get started.
 ### Navigation
 \1. **On/off switch** - toggles sidebar menu<br/>
