--- a/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
+++ b/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
@@ -8,6 +8,7 @@
 #### New Features
 - **New UI**: The entire user interface has been redesigned for a more modern and intuitive experience.
 - **Dungeons**: Added support for incorporating dungeons simulation *(currently only works if you poll data via SF Tools endpoint)*
+- **Pets**: Added support for selling pet food and simulating pet progression *(poll data via SF Tools endpoint)*
 #### Removed 
 - **Tavern Quest**: quest are no longer optimal gameplay, thus support for them is removed 
 
