--- a/SFSimulator.Frontend/wwwroot/app.css
+++ b/SFSimulator.Frontend/wwwroot/app.css
@@ -155,12 +155,16 @@ ul[role=tablist] {
   border-radius: 0.25rem;
 }
 
+.progress-bar-image {
+    background-image: url(./favicon.svg);
+}
+
 .progress-bar-value {
-  width: 100%;
-  height: 100%;
-  background-color: var(--rz-primary);
-  animation: indeterminateAnimation 1s infinite linear;
-  transform-origin: 0% 50%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--rz-primary);
+    animation: indeterminateAnimation 1s infinite linear;
+    transform-origin: 0% 50%;
 }
 
 @keyframes indeterminateAnimation {
