Converted favicon to png

--- a/SFSimulator.Frontend/wwwroot/app.css
+++ b/SFSimulator.Frontend/wwwroot/app.css
@@ -156,7 +156,7 @@ ul[role=tablist] {
 }
 
 .progress-bar-image {
-    background-image: url(./favicon.svg);
+    background-image: url(./favicon.png);
 }
 
 .progress-bar-value {
