Fixed gold curve not working for level 1000

--- a/SFSimulator.Frontend/Dialogs/CrashReportDialog.razor
+++ b/SFSimulator.Frontend/Dialogs/CrashReportDialog.razor
@@ -1,4 +1,4 @@
-﻿<RadzenStack class="h-100">
+﻿<RadzenStack class="h-full">
     <RadzenText class="rz-color-danger">@Message</RadzenText>
     <RadzenStack class="rz-p-3" Style="height: 200px; max-height: 200px; overflow-y: auto; overflow-x: clip;" Gap="0">
         @if (!ShowDetails)
