--- a/SFSimulator.Frontend/Components/Chart.razor
+++ b/SFSimulator.Frontend/Components/Chart.razor
@@ -1,4 +1,5 @@
-﻿@if (shouldInitChart)
+﻿@implements IAsyncDisposable
+@if (shouldInitChart)
 {
     <canvas id="@_elementId">
     </canvas>
@@ -25,6 +26,12 @@ else
         shouldInitChart = Records.Any(r => r.Value >= 1);
 
         return base.OnParametersSetAsync();
+    }
+
+    public async ValueTask DisposeAsync()
+    {
+        await JSRuntime
+            .InvokeVoidAsync("destroyChart" , _elementId.ToString());
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
