--- a/SFSimulator.Frontend/Pages/Simulator/SimulationOptions.razor
+++ b/SFSimulator.Frontend/Pages/Simulator/SimulationOptions.razor
@@ -129,12 +129,16 @@
                             <ChildContent>
                                 <div class="flex flex-col justify-center xs:flex-row xs:justify-start xs:gap-20">
                                     <div class="flex flex-col">
+                                        @* TODO: Add icons for fortress and worker *@
+                                        <Numeric Name="Fortress" Label="Fortress Level" Min="0" Max="20" @bind-Value="@Options.FortressLevel"/>
+                                        <Numeric Name="Worker" Label="Worker Level" Min="0" Max="20" @bind-Value="@Options.WorkerLevel"/>
                                         <Numeric Icon="Academy" Name="Academy" Label="Academy Level" Min="0" Max="20" @bind-Value="@Options.AcademyLevel"/>
                                         <Numeric Icon="GemMine" Name="GemMine" Label="Gem Mine Level" Min="0" Max="100" @bind-Value="@Options.GemMineLevel"/>
+                                        <Numeric Icon="Treasury" Name="Treasury" Label="Treasury Level" Min="0" Max="45" @bind-Value="@Options.TreasuryLevel"/>
                                     </div>
                                     <div class="flex flex-col">
+                                        @* TODO: Add underworld fields *@
                                         <Numeric Icon="GoldPit" Name="GoldPit" Label="Gold Pit Level" Min="0" Max="100" @bind-Value="@Options.GoldPitLevel"/>
-                                        <Numeric Icon="Treasury" Name="Treasury" Label="Treasury Level" Min="0" Max="45" @bind-Value="@Options.TreasuryLevel"/>
                                     </div>
                                 </div>
                             </ChildContent>
