--- a/SFSimulator.Extension/src/app/tabs/expedition-tab/expedition-tab.component.html
+++ b/SFSimulator.Extension/src/app/tabs/expedition-tab/expedition-tab.component.html
@@ -34,7 +34,16 @@
   <div hlmTabsContent="Statistics">
     Here the stats will come
   </div>
-  <div hlmTabsContent="History">
-    Here the history will come
+  <div hlmTabsContent="History" class='flex flex-col justify-center items-center'>
+    @let list = $any(savedExpeditions | async);
+    @let tep = savedExpeditions | async;
+    @for (expedition of list; track expedition.id) {
+      <div>
+        <span>{{ expedition.MainTask}}</span>
+        <span>{{ expedition.Server }}</span>
+        <span>{{ expedition.PlayerId }}</span>
+        <span>{{ expedition.CreatedAt }}</span>
+      </div>
+  }
   </div>
 </hlm-tabs>
