Adjusted item generation and aura according to toilet rework

--- a/SFSimulator.Extension/src/app/tabs/dungeon-tab/dungeon-tab.component.html
+++ b/SFSimulator.Extension/src/app/tabs/dungeon-tab/dungeon-tab.component.html
@@ -8,6 +8,9 @@
     }
   </div>
   <div class='flex justify-end w-full mb-2'>
+    <button hlmBtn variant='clear' (click)='copyToJson()'>
+      COPY TO JSON
+    </button>
     <button hlmBtn variant='clear' (click)='simulateDungeons()' [disabled]='isSimulating()'>
       <ng-icon hlm size='sm' name="lucideRefreshCw" />
     </button>
