--- a/SFSimulator.Extension/src/app/app.component.html
+++ b/SFSimulator.Extension/src/app/app.component.html
@@ -1,11 +1,19 @@
 <div class="flex h-full w-full flex-col font-[Verdana] text-foreground backdrop-brightness-30 border-l-10 border-black justify-center items-center">
-  <div hlmAccordion type="multiple" class='w-full'>
+  <div hlmAccordion type="single" class='w-full'>
     <div hlmAccordionItem>
       <tab-btn hlmAccordionTrigger class='px-3 bg-purple-600/20 font-black text-xl text-zinc-300 text-shadow-sm text-shadow-black/35'>
         DUNGEONS
       </tab-btn>
       <hlm-accordion-content class='bg-black/40'>
         <dungeon-tab/>
+      </hlm-accordion-content>
+    </div>
+    <div hlmAccordionItem>
+      <tab-btn hlmAccordionTrigger class='px-3 bg-purple-600/20 font-black text-xl text-zinc-300 text-shadow-sm text-shadow-black/35'>
+        DAILIES
+      </tab-btn>
+      <hlm-accordion-content class='bg-black/40'>
+        <dailies-tab/>
       </hlm-accordion-content>
     </div>
     <div hlmAccordionItem>
